Fix progressbar alignment.
git-svn-id: https://subversion.assembla.com/svn/file_sender/filesender/branches/filesender-2.0@2965 8555b757-d854-4b86-925a-82fd84c90ff4

--- a/www/res/css/default.css
+++ b/www/res/css/default.css
@@ -294,7 +294,7 @@ input.invalid, textarea.invalid {
     position: relative;
     display: none;
     float: right;
-    margin: 0.2333em 1em;
+    margin: 0.2333em 0 0.2333em 1em;
     width: 10em;
     height: 1.3333em;
 }
